--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ton-guarantee-backend",
+  "name": "alged_app",
   "version": "1.0.0",
-  "description": "Backend для TON Guarantee сервиса",
+  "description": "Backend для alged_app",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
