--- a/backend/package.json
+++ b/backend/package.json
@@ -7,14 +7,17 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "migrate": "node migrations/run.js",
-    "test-referral": "node test-referral.js"
+    "test-referral": "node test-referral.js",
+    "auth": "node auth.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "input": "^1.0.1",
     "node-fetch": "^3.3.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "telegram": "^2.26.22"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
